# serde-teamspeak-querystring

./: Cargo.toml  README.md
benches/: simple.rs
src/: lib.rs
src/de/: mod.rs  pair.rs  value.rs
tests/: test_deserialize_simple.rs  test_deserialize_single.rs
