[package]
authors = ["Pouya M. B. <pooyamb@gmail.com>", "KunoiSayami <cheungkwowk@gmail.com>"]
categories = ["encoding", "web-programming"]
description = "A teamspeak query string deserializer based on serde"
edition = "2021"
keywords = ["serialization", "deserialization", "teamspeak", "querystring", "serde"]
license = "MIT OR Apache-2.0"
name = "serde-teamspeak-querystring"
readme = "README.md"
repository = "https://github.com/KunoiSayami/serde-teamspeak-querystring/"
version = "0.2.0"

[dependencies]
lexical = { version = "^6.0", features = ["std", "parse-integers", "parse-floats"], default-features = false }
serde = { version = "1.0.126" }

[dev-dependencies]
criterion = "0.4.0"
serde = { version = "1.0.126", features = ["derive"] }
